some corrections made

--- a/4. product landing page/styles.css
+++ b/4. product landing page/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: verdana , sans-serif;
     background-color: #eee;
