--- a/3. techenical documentation page/styles.css
+++ b/3. techenical documentation page/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
